syntax = "proto3";

option java_multiple_files = true;

package br.com.zup.edu;

service KeyManagerService {
  rpc registrar (ChavePixRequest) returns (ChavePixResponse) {}
}

service KeyManagerRemoveService {
  rpc remover (RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

enum TipoChave {
  TIPO_CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  TIPO_CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}


message ChavePixRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chavePix = 3;
  TipoConta tipoConta = 4;
}

message ChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixRequest {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}